# cohors

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
crates/cohors-actions/: Cargo.toml
crates/cohors-actions/src/: dispatch.rs  git.rs  lib.rs  orchestrate.rs  registry.rs  runner.rs
crates/cohors-config/: Cargo.toml
crates/cohors-config/src/: config.rs  editors.rs  error.rs  lib.rs  paths.rs  prefs.rs
crates/cohors-core/: Cargo.toml
crates/cohors-core/src/: attention.rs  demo.rs  detail.rs  fuzzy.rs  lib.rs  model.rs  provider.rs  search.rs  select.rs  sort.rs  standup.rs  time.rs  view.rs
crates/cohors-fleet/: Cargo.toml
crates/cohors-fleet/src/: detail.rs  lib.rs  scanner.rs
crates/cohors-fleet/tests/: discipline.rs  integration.rs
crates/cohors-git/: Cargo.toml
crates/cohors-git/src/: detail.rs  discover.rs  error.rs  lib.rs  provider.rs  search.rs  snapshot.rs  standup.rs
crates/cohors-git/tests/: detail.rs  integration.rs  standup.rs
crates/cohors-github/: Cargo.toml
crates/cohors-github/src/: lib.rs  url.rs
crates/cohors-mcp/: Cargo.toml
crates/cohors-mcp/src/: lib.rs
crates/cohors-tui/: Cargo.toml
crates/cohors-tui/src/: action.rs  app.rs  cache.rs  cli.rs  command.rs  commands.rs  detect.rs  glyphs.rs  logging.rs  main.rs  mcp.rs  prefs.rs  scan.rs  tui.rs  ui.rs  web.rs
crates/cohors-tui/src/snapshots/: cohors__ui__tests__snapshot_ascii_synced.snap  cohors__ui__tests__snapshot_command_input.snap  cohors__ui__tests__snapshot_command_mode.snap  cohors__ui__tests__snapshot_command_mode.snap.new  cohors__ui__tests__snapshot_command_mode_shell.snap  cohors__ui__tests__snapshot_command_mode_shell.snap.new  cohors__ui__tests__snapshot_command_run_finished.snap  cohors__ui__tests__snapshot_command_run_finished.snap.new  cohors__ui__tests__snapshot_command_run_running.snap  cohors__ui__tests__snapshot_command_run_running.snap.new  cohors__ui__tests__snapshot_confirm_stash.snap  cohors__ui__tests__snapshot_confirm_stash.snap.new  cohors__ui__tests__snapshot_demo_fleet.snap  cohors__ui__tests__snapshot_demo_fleet.snap.new  cohors__ui__tests__snapshot_detail.snap  cohors__ui__tests__snapshot_detail.snap.new  cohors__ui__tests__snapshot_detail_with_remote.snap  cohors__ui__tests__snapshot_dirty_only.snap  cohors__ui__tests__snapshot_dirty_only.snap.new  cohors__ui__tests__snapshot_dock_action.snap  cohors__ui__tests__snapshot_dock_idle.snap  cohors__ui__tests__snapshot_dock_wraps_long_commit.snap  cohors__ui__tests__snapshot_empty.snap  cohors__ui__tests__snapshot_empty.snap.new  cohors__ui__tests__snapshot_empty_picker.snap  cohors__ui__tests__snapshot_filtered.snap  cohors__ui__tests__snapshot_filtered.snap.new  cohors__ui__tests__snapshot_footer_compact.snap  cohors__ui__tests__snapshot_footer_compact.snap.new  cohors__ui__tests__snapshot_header_compact.snap  cohors__ui__tests__snapshot_header_compact.snap.new  cohors__ui__tests__snapshot_help.snap  cohors__ui__tests__snapshot_help.snap.new  cohors__ui__tests__snapshot_hints_hidden.snap  cohors__ui__tests__snapshot_hints_hidden.snap.new  cohors__ui__tests__snapshot_list.snap  cohors__ui__tests__snapshot_list.snap.new  cohors__ui__tests__snapshot_loading.snap  cohors__ui__tests__snapshot_loading.snap.new  cohors__ui__tests__snapshot_multiselect.snap  (+17 more)
crates/cohors-tui/tests/: cli.rs
crates/cohors-web/: Cargo.toml  index.html  style.css
crates/cohors-web/src/: api.rs  browser.rs  github.rs  lib.rs  main.rs  server.rs
scripts/: dev-install.sh  gen-demo-repos.sh  install.sh
