[workspace]
resolver = "2"
members = [
    "crates/cohors-core",
    "crates/cohors-config",
    "crates/cohors-git",
    "crates/cohors-tui",
]

# Shared package metadata. Each crate inherits these with `field.workspace = true`
# so version/edition/license stay consistent across the workspace.
[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
license = "MIT OR Apache-2.0"
authors = ["Rushir Bhavsar <rbhavsa4@asu.edu>"]

# Shared dependencies: pinned once here, consumed in a crate with
# `<dep> = { workspace = true }`. This keeps every crate on the same version.
[workspace.dependencies]
# Models, serialization, cache, errors, logging — used across several crates.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
camino = { version = "1", features = ["serde1"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Internal crates referenced by path. Front-ends depend on these, never on the
# concrete data source directly (everything funnels through cohors-core).
cohors-core = { path = "crates/cohors-core" }
cohors-config = { path = "crates/cohors-config" }
cohors-git = { path = "crates/cohors-git" }
