[workspace]
resolver = "2"
members = [
    "crates/cohors-core",
    "crates/cohors-config",
    "crates/cohors-git",
    "crates/cohors-github",
    "crates/cohors-tui",
]

# Shared package metadata. Each crate inherits these with `field.workspace = true`
# so version/edition/license stay consistent across the workspace.
[workspace.package]
version = "0.2.2"
edition = "2024"
rust-version = "1.96"
license = "MIT"
authors = ["Rushir Bhavsar <rbhavsa4@asu.edu>"]

# Shared dependencies: pinned once here, consumed in a crate with
# `<dep> = { workspace = true }`. This keeps every crate on the same version.
[workspace.dependencies]
# Models, serialization, cache, errors, logging — used across several crates.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
camino = { version = "1", features = ["serde1"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Fuzzy matching for the filter UI (ADR-005). Note: the low-level *matcher* only
# — the high-level `nucleo` crate spawns worker threads, which would break the
# WASM-safe core.
nucleo-matcher = "0.3"

# Config parsing + cross-platform base directories (cohors-config).
toml = "0.8"
directories = "5"

# Local git adapter (cohors-git).
# gix is the primary, pure-Rust git implementation (ADR-004). Default features
# stay on — they pull no network client or C zlib backend — and already include
# `basic`/`revision` (merge-base, for ahead/behind). We add `status` for the
# worktree status (staged/modified/untracked).
gix = { version = "0.84", features = ["status"] }
# git2 (libgit2) is the feature-gated fallback for gaps gix doesn't cover yet.
git2 = { version = "0.21", default-features = false }
ignore = "0.4"
globset = "0.4"
glob = "0.3"
rayon = "1"

# TUI / CLI front-end (cohors-tui).
clap = { version = "4", features = ["derive"] }
# ratatui re-exports crossterm, so the TUI uses `ratatui::crossterm` rather than
# a separate crossterm dep — that keeps the two versions in lockstep.
ratatui = "0.30"
# Clipboard for the "copy path" action.
arboard = "3"

# Remote adapter (cohors-github): blocking HTTP client with rustls TLS + JSON.
ureq = { version = "2", features = ["json"] }

# Dev/test helpers.
tempfile = "3"
assert_cmd = "2"
insta = "1"

# Internal crates referenced by path. Front-ends depend on these, never on the
# concrete data source directly (everything funnels through cohors-core).
cohors-core = { path = "crates/cohors-core" }
cohors-config = { path = "crates/cohors-config" }
cohors-git = { path = "crates/cohors-git" }
cohors-github = { path = "crates/cohors-github" }

# Release config for cargo-dist (the `dist` tool). This is a starting point —
# run `dist init` to (re)generate the matching `.github/workflows/release.yml`
# with installers; until then the hand-written release workflow ships binaries
# on tag. `publish-jobs = []` means we do NOT publish to any registry.
[workspace.metadata.dist]
cargo-dist-version = "0.28.0"
ci = "github"
installers = ["shell"]
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
]
publish-jobs = []
pr-run-mode = "plan"
