[package]
name = "cohors-config"
description = "Configuration and discovery settings for cohors (TOML)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
cohors-core = { workspace = true }
