[package]
name = "cohors-config"
description = "Configuration and discovery settings for cohors (TOML)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
directories = { workspace = true }
camino = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
