[package]
name = "cohors-github"
description = "Remote (GitHub) data source for cohors: PR and CI status via the REST API."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
cohors-core = { workspace = true }
serde = { workspace = true }
ureq = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
# Fixture-JSON parse tests for the REST response structs.
serde_json = { workspace = true }
