[package]
name = "cohors-mcp"
description = "Model Context Protocol adapter for cohors: a hand-rolled JSON-RPC stdio server exposing the fleet reads and the gated actions to a coding agent."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
cohors-core = { workspace = true }
cohors-git = { workspace = true }
cohors-github = { workspace = true }
cohors-actions = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
